apps/platform/platform-test/mongo-express/templates/common.yaml
---
# Source: mongo-express/templates/common.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-express
  labels:
    app.kubernetes.io/instance: mongo-express
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: mongo-express
    app.kubernetes.io/service: mongo-express
    app.kubernetes.io/version: 1.0.2
    helm.sh/chart: mongo-express-0.1.0
  namespace: platform-test
spec:
  type: ClusterIP
  ports:
    - port: 8081
      targetPort: 8081
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: mongo-express
    app.kubernetes.io/name: mongo-express
---
# Source: mongo-express/templates/common.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express
  labels:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: mongo-express
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: mongo-express
    app.kubernetes.io/version: 1.0.2
    helm.sh/chart: mongo-express-0.1.0
  namespace: platform-test
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/controller: main
      app.kubernetes.io/name: mongo-express
      app.kubernetes.io/instance: mongo-express
  template:
    metadata:
      labels: 
        app.kubernetes.io/controller: main
        app.kubernetes.io/instance: mongo-express
        app.kubernetes.io/name: mongo-express
    spec: 
      enableServiceLinks: false
      serviceAccountName: default
      automountServiceAccountToken: true
      hostIPC: false
      hostNetwork: false
      hostPID: false
      dnsPolicy: ClusterFirst
      imagePullSecrets: 
        - name: cr-spydersoft-github
      containers: 
        - env:
          - name: ME_CONFIG_MONGODB_PORT
            value: "27017"
          - name: ME_CONFIG_BASICAUTH
            value: "false"
          - name: ME_CONFIG_MONGODB_URL
            valueFrom:
              secretKeyRef:
                key: ME_CONFIG_MONGODB_URL
                name: mongo-express-config
          image: mongo-express:1.0.2
          imagePullPolicy: IfNotPresent
          name: main
          resources:
            requests:
              cpu: 5m
---
# Source: mongo-express/templates/common.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mongo-express
  labels:
    app.kubernetes.io/instance: mongo-express
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: mongo-express
    app.kubernetes.io/version: 1.0.2
    helm.sh/chart: mongo-express-0.1.0
  namespace: platform-test
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: main
      namespace: envoy-gateway-system
  hostnames:
    - "mongo.mattgerega.net"
  rules:
    - backendRefs:
      - group: ""
        kind: Service
        name: mongo-express
        namespace: platform-test
        port: 8081
        weight: 1
